# tauri-plugin-shellx

./: .prettierignore  Cargo.toml  README.md  build.rs  jsr.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: clippy.yml  docs.yml  jsr-publish.yml
examples/demo/: package.json  pnpm-lock.yaml  vite.config.js
examples/demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/demo/src-tauri/capabilities/: default.json
examples/demo/src-tauri/src/: main.rs
examples/demo/src/lib/: types.ts
examples/demo/src/lib/components/: block.svelte
examples/demo/src/routes/: +layout.svelte  +page.svelte
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: child.ts  command.ts  event.ts  index.ts  script.ts  types.ts  util.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: fix_path_env.toml  kill_pid.toml  where_is_command.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  fix_path_env.rs  lib.rs  mobile.rs  open.rs  process.rs
