[package]
name = "tauri-plugin-shellx"
version = "2.0.2"
authors = ["Huakun"]
description = "Unlocked Tauri Shell Plugin"
license = "MIT"
repository = "https://github.com/HuakunShen/tauri-plugin-shellx.git"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shellx"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"
encoding_rs = "0.8"
os_pipe = "1"
shared_child = "1"
serde_json = "1.0.117"
schemars = "0.8"
regex = "1"
open = { version = "5", features = ["shellexecute-on-windows"] }
tokio = { version = "1.38.0", features = ["time"] }

[target."cfg(not(target_os = \"windows\"))".dependencies]
strip-ansi-escapes = "0.2"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
